prova layout con calc

--- a/index.html
+++ b/index.html
@@ -16,13 +16,19 @@
 
     <!-- CONTENUTO CENTRALE -->
     <main>
-      <aside class="">
+      <!-- sinistra -->
+      <aside class="sinistra">
 
       </aside>
+
+      <!-- centro -->
       <section>
 
+
       </section>
-      <aside class="">
+
+      <!-- destra -->
+      <aside class="destra">
 
       </aside>
     </main>
