--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <!-- PARTE ALTA -->
+    <!-- PARTE ALTA ----------------------------------->
     <header>
 
     </header>
@@ -14,7 +14,7 @@
 
     </nav>
 
-    <!-- CONTENUTO CENTRALE -->
+    <!-- CONTENUTO CENTRALE ---------------------------->
     <main>
       <!-- sinistra -->
       <aside class="sinistra">
@@ -23,6 +23,7 @@
 
       <!-- centro -->
       <section>
+        <!-- contenitore per padding -->
         <div id="section">
 
         </div>
@@ -36,7 +37,7 @@
       </aside>
     </main>
 
-    <!-- PARTE BASSA -->
+    <!-- PARTE BASSA ------------------------------------->
     <footer>
 
     </footer>
